2009-03-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser
	-homeFolderInContext:context]): no longer put the home folder in
	cache, since it uses an context that is freed and invalidated
	afterwards, which can cause crashes.

2009-03-19  Ludovic Marcotte <lmarcotte@inverse.ca>

        * Updated the sope.spec file wrt to changes
	related to 0.9 -> 1.0
	* Updated the SOGo documentation to also reflect
	the version change.

2009-03-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUserFolder.m: initialize max to the correct value.

2009-03-18  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/MainUI/SOGoRootPage.m ([SOGoRootPage -version]): new method
	that returns the application version.
	
	* iCalDateTime.m ([iCalDateTime -dateTime]): when not defined, the 
	timezone is now guessed from the date of the current object.
	
2009-03-18  Ludovic Marcotte <lmarcotte@inverse.ca>

        * Updated the documentation for the SOGo
	update server.
	* Enabled support for Konqueror. We use the
	Safari 'exceptions' in the JavaScript code.
	* Main/SOGo.m: Corrected a small mistake in previous
	commit wrt sogod-0.9 > sogod change
	* Updated the NEWS file for the release

2009-03-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Contacts/SOGoContactLDIFEntry.m ([SOGoContactLDIFEntry
	-vCard]): same as below.

	* SoObjects/Appointments/SOGoFreeBusyObject.m ([SOGoFreeBusyObject
	-iCalStringForFreeBusyInfos:_infoswithMethod:methodfrom:_startDateto:_endDate]):
	same as below.

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent -calendar:create:secure]): specify
	"-//Inverse inc./SOGo 1.0//EN" as PRODID.

	* Main/sogod.m (convertOldSOGoDomain): new function that convert
	the old "sogod-0.9" NSUserDefaults domain to "sogod".

	* Main/SOGoProductLoader.m ([SOGoProductLoader
	+sogoMajorVersion]): removed useless method.
	([SOGoProductLoader +sogoMinorVersion]): removed useless method.